// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create header screens for different "types":  should create correct header for details 1`] = `
Array [
  <DocumentFragment>
    
            
    <div
      id="header"
    >
      
                
      <div
        class="back go-back"
        title="Back"
      />
      
                
      <div
        class="header-title"
      >
        www.stackoverflow.com
      </div>
      
                
      <div
        class="close-all"
        data-index-number="0"
        title="Close all listed tabs"
      />
      
            
    </div>
    
        
  </DocumentFragment>,
  <DocumentFragment>
    <div
      class="separator separator-bottom"
    />
  </DocumentFragment>,
]
`;

exports[`Create header screens for different "types":  should create correct header for latest 1`] = `
Array [
  <DocumentFragment>
    
            
    <div
      id="header"
    >
      
                
      <div
        class="back go-back"
        title="Back"
      />
      
                
      <div
        class="header-title"
      >
        10 longest unused tabs
      </div>
      
                
            
    </div>
    
        
  </DocumentFragment>,
  <DocumentFragment>
    <div
      class="separator separator-bottom"
    />
  </DocumentFragment>,
]
`;

exports[`should create correct header for latest without id and tabsOverview 1`] = `
Array [
  <DocumentFragment>
    
            
    <div
      id="header"
    >
      
                
      <div
        class="back go-back"
        title="Back"
      />
      
                
      <div
        class="header-title"
      >
        10 longest unused tabs
      </div>
      
                
            
    </div>
    
        
  </DocumentFragment>,
  <DocumentFragment>
    <div
      class="separator separator-bottom"
    />
  </DocumentFragment>,
]
`;
